# pgai

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.worker  INTEGRATION_TEST_PLAN.md  OBSERVABILITY_ERROR_RECOVERY_PLAN.md  README.md  REMEDIATION_PLAN.md  SETUP_SQL_FIXES.md
docs/: architecture.md  setup-guide.md  sql-reference.md  worker-config.md  worker-tracking.md
extension/: Cargo.toml  extension.control
extension/sql/: setup.sql
extension/src/: lib.rs
extension/tests/pg_regress/expected/: create_vectorizer.out  realistic_content.out  setup.out  worker_tracking.out
extension/tests/pg_regress/sql/: create_vectorizer.sql  setup.sql  worker_tracking.sql
plans/: AUTOK_INTEGRATION.md  EXTENSION_ANALYSIS.md  INTEGRATION_TESTING.md  PGAI_ANALYSIS.md  TEST_PORT_PLAN.md  VECTORIZER_BACKPORT_PLAN.md  WORKER_LOGGING_IMPROVEMENTS.md  WORKER_TRACKING_DESIGN.md  analysis.md
projects/extension/: pyproject.toml  requirements-lock.txt
projects/pgai/: pyproject.toml
scripts/: run-worker-integration-tests.sh
text-splitter/: CHUNKING_STRATEGIES.md  Cargo.toml  README.md
text-splitter/src/: character.rs  lib.rs  merge.rs  recursive.rs  semchunk.rs  sentence.rs  split.rs
text-splitter/tests/: example_content.rs  semantic_ollama.rs
worker/: Cargo.toml  FEATURE_GAP.md  TEST_COVERAGE_GAP.md  justfile
worker/src/: embedder.rs  errors.rs  executor.rs  lib.rs  main.rs  models.rs  worker.rs  worker_tracking.rs
worker/tests/: integration.rs
worker/tests/common/: mod.rs
