[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.25"
ollama-rs = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-client"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
url = "2.5"
async-trait = "0.1"
semver = "1.0"
backon = "1"
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
pgai-text-splitter = { path = "../text-splitter" }
tiktoken-rs = "0.9.1"

[dev-dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["full"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
