[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = { version = "0.33", features = ["embedding"] }
ollama-rs = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["trace", "http-proto", "hyper-client"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
url = "2.5"
async-trait = "0.1"
semver = "1.0"
backon = "1"
backoff = "0.4"
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
pgai-text-splitter = { path = "../text-splitter" }
tiktoken-rs = "0.9.1"

[dev-dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["full"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
