[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pgai"
dynamic = ["version"]
requires-python = ">=3.10,<3.14"

dependencies= [
    "openai",
    "tiktoken",
    "ollama",
    "anthropic",
    "cohere",
    "backoff",
    "voyageai",
    "datasets",
    "litellm",
    "google-cloud-aiplatform",
    "langchain-text-splitters",
    "jinja2",
    "boto3",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "python-dotenv",
    "fastapi",
    "fastapi-cli",
    "psycopg[binary]",
    "uv",
    "pgspot",
    "requests",
    "semver",
]

[tool.setuptools.dynamic]
version = {attr = "ai.__version__"}
dependencies = {file = ["requirements-lock.txt"]}

[tool.setuptools]
packages = ["ai"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
#    "SIM",  # flake8-simplify
    "I",    # isort
    "ARG",  # unused arguments
    "W291", # trailing whitespace
    "PIE",  # print statements
    "Q"     # flakes8-quote
]
ignore = ["E501", "W291", "ARG001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.uv]
reinstall-package = ["pgai"]

[tool.pytest.ini_options]
addopts = [
    # Print basic test output without full source code or traceback.
    "--tb=short",
]


